	  compilation failure was because we use strnlen() which is gnu
	  specific and not present on my current version of OSX so ntfsdecrypt
	  now provides own version if it is not present on system.  (Anton)
	- Fix endianness bug (le16 instead of le32 when accessing mft record
	  bytes_in_use) in volume.c::ntfs_volume_write_flags() and
	  ntfsfix.c::OLD_ntfs_volume_set_flags().  (Anton)

10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.

	- Fix hardcoded location for uninstalling mount.ntfs-fuse hardlink to
	  match the relocatable location for installing it.  (Anton, Szaka)
	- Move mount.ntfs-fuse and mkfs.ntfs to be symlinks instead of
	  hardlinks and move both to /sbin rather than prefix/sbin.  Note we
	  still obey $destdir so building packages works as well as installing
	  into alternate chroot / other system still works.  (Anton)
	- ntfscmp: fix some corner cases and all memory leaks; handle corrupt
	  NTFS more gracefully.  (Szaka)
	- If the system does not have realpath(), supply our own dummy version
	  which just copies the string without any kind of checking or
	  expansion.  (Anton)

07/10/2005 - 1.12.0 - Lots of fixes and enhancements!

	- Add ./configure detection for gnutls library and make minimum version
	  1.2.3 which is the one that has the rsa key export fixed.  (Anton)
	- Put in a minimum version for libgcrypt of 1.2.0 as I do not know if
	  our code works with earlier versions.  (Anton)
	- Fix some memory leaks in ntfsdecrypt and do some cleanups.  (Anton)
	- Fix ntfsdecrypt to also work with passwordless files.  Note this
	  requires a patched gnutls library or it still does not work.  (Anton)
	- Add new APIs for index adding/remove:
	    index.[ch]::ntfs_index_add_filename and index.[ch]::ntfs_index_rm.
	  They support only basic cases, so can fail with EOPNOTSUPP.  (Yura)
	- Add new API for index context reinitialization:
	    ntfs_index_ctx_reinit.  (Yura)