@@ -1882,7 +1882,7 @@ int main(int argc, char **argv)
 		if (opts.filename) {
 			inode = ntfs_pathname_to_inode(vol, NULL, opts.filename);
 		} else {
-			inode = ntfs_inode_open(vol, MK_LE_MREF(opts.inode, 0));
+			inode = ntfs_inode_open(vol, MK_MREF(opts.inode, 0));
 		}
 
 		/* dump the inode information */
